Replace POJOs with records where possible.